# dock-ai

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
src/booking_hub/: server.py
src/booking_hub/adapters/: __init__.py  zenchef.py
src/booking_hub/registry/: seed_data.py
src/dock_ai/: __init__.py  categories.py  server.py
src/dock_ai/adapters/: __init__.py  base.py  demo.py
src/dock_ai/registry/: __init__.py  database.py  registry.py  seed_data.py
supabase/migrations/: 00001_create_restaurant_mappings.sql  00001_create_schema.sql  00002_seed_data.sql
tests/: __init__.py  conftest.py  test_adapters.py  test_categories.py  test_server.py
