[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dock-ai"
version = "0.1.0"
description = "MCP server aggregating multiple booking platforms (restaurants, appointments, services)"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["mcp", "booking", "venue", "ai", "agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fastmcp>=2.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "supabase>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "respx>=0.20.0",
]

[project.urls]
Homepage = "https://github.com/dock-ai/dock-ai"
Repository = "https://github.com/dock-ai/dock-ai"
Issues = "https://github.com/dock-ai/dock-ai/issues"

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
dock-ai = "dock_ai.server:main"
